RESOLVED FIXED190368
ISOTrackEncryptionBox returns incorrect defaultKeyID
https://bugs.webkit.org/show_bug.cgi?id=190368
Summary ISOTrackEncryptionBox returns incorrect defaultKeyID
Jer Noble
Reported 2018-10-08 12:40:24 PDT
ISOTrackEncryptionBox returns incorrect defaultKeyID
Attachments
Patch (14.79 KB, patch)
2018-10-08 12:46 PDT, Jer Noble
no flags
Patch (18.51 KB, patch)
2018-10-08 12:48 PDT, Jer Noble
no flags
Patch for landing (19.37 KB, patch)
2018-10-08 15:50 PDT, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2018-10-08 12:44:15 PDT
Jer Noble
Comment 2 2018-10-08 12:46:11 PDT
Jer Noble
Comment 3 2018-10-08 12:48:20 PDT
EWS Watchlist
Comment 4 2018-10-08 12:52:00 PDT
Attachment 351805 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/iso/ISOProtectionSchemeInfoBox.h:39: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 5 2018-10-08 13:46:08 PDT
Comment on attachment 351805 [details] Patch WinCairo failure appears to be a "permission denied" error. Landing.
WebKit Commit Bot
Comment 6 2018-10-08 14:12:20 PDT
Comment on attachment 351805 [details] Patch Clearing flags on attachment: 351805 Committed r236941: <https://trac.webkit.org/changeset/236941>
WebKit Commit Bot
Comment 7 2018-10-08 14:12:22 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 8 2018-10-08 15:22:00 PDT
Re-opened since this is blocked by bug 190374
Jer Noble
Comment 9 2018-10-08 15:50:58 PDT
Created attachment 351825 [details] Patch for landing
EWS Watchlist
Comment 10 2018-10-08 15:53:24 PDT
Attachment 351825 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/iso/ISOProtectionSchemeInfoBox.h:39: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 11 2018-10-09 09:54:39 PDT
Comment on attachment 351825 [details] Patch for landing Clearing flags on attachment: 351825 Committed r236964: <https://trac.webkit.org/changeset/236964>
WebKit Commit Bot
Comment 12 2018-10-09 09:54:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.